# test-pypi

./: .pypirc  pypproject.toml  pyproject.toml
.github/workflows/: python-publish.yml
src/test_pypi.egg-info/: PKG-INFO  SOURCES.txt
