[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oru-test-init-cl"
version = "0.0.9"                      # Pensez à incrémenter la version
description = "Outil interne ORU-PACA"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Louis Clavel" }]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
