[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-pypi"
version = "0.2.0"
description = "Initialisation du package de test pour ORU-PACA"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Louis Clavel" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
repository = "https://github.com/ORU-PACA/test-pypi"
